--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
 
       - run: bash scripts/generate.sh > Dockerfile
       
-      - run: echo Dockerfile
+      - run: cat Dockerfile
 
       #- run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
